--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));
+
 body {
   font-family: 'Hind Siliguri', sans-serif;
   /* background: linear-gradient(to left, #374151, #111827, #000000); dark gray → darker → black */
